--- a/css/screen.css
+++ b/css/screen.css
@@ -62,6 +62,9 @@
     --global-whitespace-xl: calc(var(--global-whitespace) * 2); /*  = 48px */
     --global-whitespace-xxl: calc(var(--global-whitespace) * 3); /*  = 72px */
 
+    --global-inline-symbol-space:calc(var(--global-baseline) * 1.75); /*  = 14px*/
+    --global-inline-symbol-size:calc(var(--global-baseline) * 2.5); /*  = 20px*/
+
     /* forms */
     --global-placeholder-color: var(--global-color-neutral-x-light);
     --global-input-backgroundColor: White;
@@ -69,8 +72,12 @@
     --global-input-borderColor: var(--global-color-neutral-xxx-light);
     --global-input-hover-borderColor: var(--global-color-neutral-xx-light);
     --global-input-focus-borderColor: var(--global-color-alpha);
-    --global-input-focus-boxShadowColor: var(--global-color-alpha-x-transparent);
+    --global-input-focus-boxShadowColor: var(--local-error-input-focus-boxShadowColor,var(--global-color-alpha-x-transparent));
     --global-input-focus-boxShadow: 0 0 0 3px var(--global-input-focus-boxShadowColor);
+
+    /*error state*/
+    --global-error-color:#f33;
+
 }
 
 /*------------------------------------*\
@@ -605,10 +612,21 @@ input::placeholder {
     ---
     Everything form related here
 */
+.c-form-field--floating {
+    position:relative;
+}
+
 
 .c-form-field--option {
     display: flex;
     align-items: center;
+}
+
+.has-error {
+    --label-error-color:var(--global-error-color);
+    --local-error-input-focus-boxShadowColor:var(--global-error-color);
+
+    --error-message-display:block;
 }
 
 /*
@@ -622,7 +640,7 @@ input::placeholder {
     -moz-appearance: none;
     appearance: none;
     width: 100%;
-    border: 1px solid var(--global-input-borderColor);
+    border: var(--global-borderWidth) solid var(--label-error-color,var(--global-input-borderColor));
     border-radius: var(--global-borderRadius);
     background-color: var(--global-input-backgroundColor);
     color: var(--global-input-color);
@@ -635,13 +653,19 @@ input::placeholder {
 }
 
 .c-input:hover {
-    border-color: var(--global-input-hover-borderColor);
+    border-color: var(--label-error-color,var(--global-input-hover-borderColor));
 }
 
 .c-input:focus,
 .c-input:active {
     border-color: var(--global-input-focus-borderColor);
     box-shadow: var(--global-input-focus-boxShadow);
+}
+
+.c-input:focus + .c-label--can-float,
+
+.c-label--can-float.is-floating {
+    transform:translateY(-24px);
 }
 
 /*
@@ -666,23 +690,44 @@ more padding on the right to avoid overlap
 */
 
 .c-label {
-    --label-color: var(--global-color-neutral-xx-dark);
+    /*--label-color: var(--global-color-neutral-xx-dark);*/
     margin-bottom: 0;
     padding-bottom: var(--global-whitespace-sm);
     font-size: 14px;
     line-height: 16px;
-    color: var(--label-color);
+    color: var(--label-error-color,var(--global-color-neutral-xx-dark));
+}
+
+.c-label--can-float
+{
+    position: absolute;
+    top: 12px;
+    left: 8px;
+    padding: 4px 8px;
+
+    will-change: transform;
+
+    transform: translateY( 0 );
+    transition: transform 200ms ease-in-out;
+    box-shadow: 0 0 4px 4px rgba(255,255,255,0.8);
+    background: white;
 }
 
 .c-label--option {
     padding-bottom: 0;
 }
 
+.c-label__error-message {
+    font-weight:600;
+    float:right;
+    display: var(--error-message-display, none);
+}
+
 /*
     Component: Button
     ---
     Class to put on form buttons or
-*/
+*/                  
 
 .c-button {    
     --button-borderColor: var(--global-color-alpha-dark);
@@ -935,6 +980,46 @@ more padding on the right to avoid overlap
     ---
     Password toggle custom checkbox
 */
+.c-password-toggle-container {
+    position:relative;
+    display:block;
+}
+
+.c-password-toggle {
+    position: absolute;
+    width:var(--global-inline-symbol-size);
+    height:var(--global-inline-symbol-size);
+
+    top:var(--global-inline-symbol-space);
+    right:var(--global-inline-symbol-space);
+
+    fill:var(--global-color-neutral-x-light);
+    
+}
+
+.c-password-toggle__symbol--show {
+    display:block;
+}
+
+.c-password-toggle__symbol--hide {
+    display:none;
+}
+
+
+
+.c-password-toggle__checkbox:checked + .c-password-toggle__label .c-password-toggle__symbol--show {
+   display: none;
+}
+
+.c-password-toggle__checkbox:checked + .c-password-toggle__label .c-password-toggle__symbol--hide {
+   display:block;
+}
+
+
+.c-password-toggle__symbol {
+    position:absolute;
+}
+
 
 /*------------------------------------*\
 #UTILITIES
